# sqlx-pg-seeder

./: .gitignore  Cargo.toml  Readme.md  cargo-docs.sh  pg-seeder.toml  rustfmt.toml
deprecated/: address.json  posts.json  posts.txt  posts_created_at_is_t.json  posts_created_at_no_t.json  posts_seeder.rs  users copy.json  users.txt  users_seeder.rs
docs/: crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
docs/sqlx_pg_seeder/: all.html  fn.read_json_file.html  fn.seeder.html  index.html  sidebar-items.js
docs/src/sqlx_pg_seeder/: lib.rs.html
example/: main.rs
ko/: Readme.md
src/: lib.rs
